tiser fixed z-index by letter + car

--- a/src/style/page/style.sass
+++ b/src/style/page/style.sass
@@ -6,9 +6,8 @@
 @import "../../fitures/form/_form.sass"
 @import '@splidejs/splide/css'
 @import "../../fitures/slider/_slider"
+@import "../../fitures/bigCaption/_bigCaption"
 
-$posUpLetters: 0 0 1 9px, 1 75px 0 0, 2 147px 1 -9px, 3 230px 2 -9px, 4 306px 1 0, 5 413px 2 4px, 6 493px 1 9px, 7 572px 0 0
-$posDownLetters: 0 0 2 9px, 1 75px 1 0, 2 147px 0 -9px, 3 215px 1 -9px
 *,*::before,*::after
     box-sizing: border-box
     margin: 0
@@ -27,7 +26,7 @@ body
         position: absolute
         top: -322px
         right: -279px
-        z-index: -1
+        z-index: 0
 
     &__right
         width: 1192px
@@ -56,33 +55,12 @@ body
 .downCaption
     margin-top: 11em
     right: 0
-.bigCaption
-    &__letter
-        color: #fff
-        font-size: 200px
-        font-family: 'Roboto Condensed', sans-serif
-        font-weight: bold
-        display: inline
-        filter: drop-shadow(9px 4px 6px #0005)
-        position: absolute
-        &:nth-child(odd)
-            z-index: 2
-        @each $idx, $offset, $z, $shadow in $posUpLetters
-            &[data-id="#{$idx}"]
-                left: $offset
-                z-index: $z
-                filter: drop-shadow($shadow 4px 6px #0005)
-.downCaption .bigCaption__letter
-    @each $idx, $offset, $z, $shadow in $posDownLetters
-        &[data-id="#{$idx}"]
-            left: $offset
-            z-index: $z
-            filter: drop-shadow($shadow 4px 6px #0005)
+
 .baloon
     position: absolute
     top: -157px
     transition: transform 1s
-    z-index: 1
+    z-index: 2
 .reason
     position: relative
     display: flex
